90~ confidence in buy phase detection, had to use 1080p source video

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,9 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "source": [
-    "What is this?"
+    "Jupyter Notebook file for testing code snippets conveniently and for performing image pre processing and manipulation (cropping etc)"
    ],
    "metadata": {
     "collapsed": false
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "import numpy as np, cv2 as cv, youtube_dl, pprint, time, easyocr, pandas as pd\n"
@@ -19,34 +19,33 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-22T05:52:40.136693500Z",
-     "start_time": "2023-07-22T05:52:37.383080200Z"
+     "end_time": "2023-07-23T03:54:36.836048200Z",
+     "start_time": "2023-07-23T03:54:36.830553800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "frame = cv.imread('images/screenshot.png')\n",
     "buy = cv.imread('images/buy.png')\n",
     "buytrans = cv.imread('images/buytrans.png')\n",
-    "ss = cv.imread('screenshots/frame945.png')\n",
     "spike = cv.imread('screenshots/spike_trans1.png')\n",
     "win = cv.imread('screenshots/win_gray.png')\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-22T08:07:56.863684400Z",
-     "start_time": "2023-07-22T08:07:56.798149900Z"
+     "end_time": "2023-07-23T03:54:27.435380500Z",
+     "start_time": "2023-07-23T03:54:27.395790200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -64,14 +63,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-22T05:52:40.292382300Z",
-     "start_time": "2023-07-22T05:52:40.182583800Z"
+     "end_time": "2023-07-23T03:54:28.095163100Z",
+     "start_time": "2023-07-23T03:54:27.989770100Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "cropped_image = buytrans[70:190,90:380]\n",
@@ -83,14 +82,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-22T05:56:48.010899600Z",
-     "start_time": "2023-07-22T05:56:46.249055500Z"
+     "end_time": "2023-07-23T03:54:30.223042700Z",
+     "start_time": "2023-07-23T03:54:28.890030400Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
@@ -108,20 +107,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-22T08:08:35.106973Z",
-     "start_time": "2023-07-22T08:08:35.005214600Z"
+     "end_time": "2023-07-23T03:53:55.182112100Z",
+     "start_time": "2023-07-23T03:53:55.074260700Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,69 +131,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-22T05:58:13.906886600Z",
-     "start_time": "2023-07-22T05:58:13.827637100Z"
+     "end_time": "2023-07-23T03:53:55.192963100Z",
+     "start_time": "2023-07-23T03:53:55.183109Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.37488874793052673\n"
-     ]
-    }
-   ],
-   "source": [
-    "temp = cv.matchTemplate(ss, buy, cv.TM_CCOEFF_NORMED)\n",
-    "min_val, max_val, min_loc, max_loc = cv.minMaxLoc(temp)\n",
-    "print(max_val)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-22T08:08:42.749111900Z",
-     "start_time": "2023-07-22T08:08:42.693710800Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(720, 960, 3)"
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ss.shape"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-22T08:09:15.310298900Z",
-     "start_time": "2023-07-22T08:09:15.310298900Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
       "text/plain": "(1079, 1439, 3)"
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,8 +155,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-22T08:09:29.156555500Z",
-     "start_time": "2023-07-22T08:09:29.133617400Z"
+     "end_time": "2023-07-23T03:54:18.971305400Z",
+     "start_time": "2023-07-23T03:54:18.964831100Z"
     }
    }
   },
